--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -16,6 +16,9 @@
     display: flex;
     -ms-flex-item-align: stretch;
     align-self: stretch;
+    font-family: "Poiret One", serif;
+    font-weight: 600;
+    font-style: normal;
   }
 }
 
