--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -31,6 +31,8 @@
 
 //-------------------- Fonts --------------------//
 
+@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
+
 $body-font: 'Poppins', sans-serif;
 
 
